utualizar dados user

--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -24,7 +24,7 @@
     <div class="row">
         <div class="col-md-3">
                 <div class="row text-center mt-4">
-                  <div class="col-12"><img src="./images/Beneficios 1.svg"></div>
+                  <div class="col-12"><img src="/images/Beneficios 1.svg"></div>
                 </div>
                 <div class="row">
                    <div class="col-12 mt-4"><h5 class="text-center" > BENEFICIOS DO SERVIÇO</h5></div>
@@ -32,7 +32,7 @@
         </div>
         <div class="col-md-3">
                 <div class="row text-center mt-4">
-                    <div class="col-12"><img src="./images/Beneficios 2.svg"></div>
+                    <div class="col-12"><img src="/images/Beneficios 2.svg"></div>
                 </div>
                 <div class="row">
                     <div class="col-12 mt-4"><h5 class="text-center">BENEFICIOS DO SERVIÇO</h5></div>
@@ -40,7 +40,7 @@
         </div>
         <div class="col-md-3">
                 <div class="row text-center mt-4">
-                    <div class="col-12"><img src="./images/Beneficios 3.svg"></div>
+                    <div class="col-12"><img src="/images/Beneficios 3.svg"></div>
                 </div>
                 <div class="row">
                     <div class="col-12 mt-4"><h5 class="text-center">BENEFICIOS DO SERVIÇO</h5></div>
@@ -48,7 +48,7 @@
         </div>
         <div class="col-md-3">
                 <div class="row text-center mt-4">
-                    <div class="col-12"><img src="./images/Beneficios 4.svg"></div>
+                    <div class="col-12"><img src="/images/Beneficios 4.svg"></div>
                 </div>
                 <div class="row">
                     <div class="col-12 mt-4"><h5 class="text-center">BENEFICIOS DO SERVIÇO</h5></div>
@@ -68,7 +68,7 @@
      <div class="row">
          <div class="col-md">
              <div class="row text-center mt-4">
-                 <div class="col-12"><img src="./images/Book Online.svg"></div>
+                 <div class="col-12"><img src="/images/Book Online.svg"></div>
              </div>
              <div class="row">
                  <div class="col-12 mt-4"><h5 class="text-center" >{{translation.RESERVA_ONLINE}} </h5></div>
@@ -76,7 +76,7 @@
          </div>
          <div class="col-md">
              <div class="row text-center mt-4">
-                 <div class="col-12"><img src="./images/Receive Package.svg"></div>
+                 <div class="col-12"><img src="/images/Receive Package.svg"></div>
              </div>
              <div class="row">
                  <div class="col-12 mt-4"><h5 class="text-center">{{translation.RYP}}</h5></div>
@@ -84,7 +84,7 @@
          </div>
          <div class="col-md">
              <div class="row text-center mt-4">
-                 <div class="col-12"><img src="./images/Enjoy Internet Anywhere.svg"></div>
+                 <div class="col-12"><img src="/images/Enjoy Internet Anywhere.svg"></div>
              </div>
              <div class="row">
                  <div class="col-12 mt-4"><h5 class="text-center">{{translation.EIA}}</h5></div>
@@ -92,7 +92,7 @@
          </div>
          <div class="col-md">
              <div class="row text-center mt-4">
-                 <div class="col-12"><img src="./images/Return the Wifi Device.svg"></div>
+                 <div class="col-12"><img src="/images/Return the Wifi Device.svg"></div>
              </div>
              <div class="row">
                  <div class="col-12 mt-4"><h5 class="text-center">{{translation.RWD}}</h5></div>
@@ -113,7 +113,7 @@
             <div class="pacote text-center">
                 <h5 class="card-header planocabeca">{{translation.PN}} </h5>
                 <div class="card-body">
-                    <img class="card-img mt-0" src="./images/Router.jpg" alt="Card image">
+                    <img class="card-img mt-0" src="/images/Router.jpg" alt="Card image">
                     <!--<h6 class="card-text mt-5">equipment image with transparency</h6>-->
                     <h1 class="card-text  font-weight-bold">000$</h1>
                     <p class="card-text font-weight-bold">Data plan per day</p>
@@ -127,7 +127,7 @@
             <div class="pacote text-center">
                 <h5 class="card-header planocabeca">{{translation.PN}}</h5>
                 <div class="card-body">
-                    <img class="card-img mt-0" src="./images/Router.jpg" alt="Card image">
+                    <img class="card-img mt-0" src="/images/Router.jpg" alt="Card image">
                     <!--<h6 class="card-text mt-5">equipment image with transparency</h6>-->
                     <h1 class="card-text font-weight-bold">000$</h1>
                     <p class="card-text font-weight-bold">Data plan per day</p>
@@ -141,7 +141,7 @@
             <div class="pacote text-center">
                 <h5 class="card-header planocabeca">{{translation.PN}}</h5>
                 <div class="card-body">
-                    <img class="card-img mt-0" src="./images/Router.jpg" alt="Card image">
+                    <img class="card-img mt-0" src="/images/Router.jpg" alt="Card image">
                     <!--<h6 class="card-text mt-5">equipment image with transparency</h6>-->
                     <h1 class="card-text font-weight-bold">000$</h1>
                     <p class="card-text font-weight-bold">Data plan per day</p>
