--- a/views/user/dash.handlebars
+++ b/views/user/dash.handlebars
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-md-4">
             <figure>
-                <img src="./images/General.svg">
+                <img src="../images/General.svg">
                 <figcaption class="mt-2 h1">{{User.firstName}} {{User.lastName}}</figcaption>
             </figure>
         </div>
@@ -14,7 +14,7 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-md-12">
-                            <h5 class="card-title">MINHAS INFORMAÇÕES <a href="./users/config"><i class="float-right fas fa-user-edit"></i></a></h5>
+                            <h5 class="card-title">MINHAS INFORMAÇÕES <a href="/users/config"><i class="float-right fas fa-user-edit"></i></a></h5>
                         </div>
                     </div>
 
