--- a/views/home/faq.handlebars
+++ b/views/home/faq.handlebars
@@ -42,7 +42,7 @@
             <div class="row text-center mt-4">
                 <div class="col-12">
                     <a href="./faq/2">
-                        <img class="" src="./images/Usage.svg">
+                        <img class="" src="/images/Usage.svg">
                     </a>
                 </div>
             </div>
@@ -54,7 +54,7 @@
             <div class="row text-center mt-4">
                 <div class="col-12">
                     <a href="./faq/3">
-                        <img class="" src="./images/Booking%20and%20Payment.svg">
+                        <img class="" src="/images/Booking%20and%20Payment.svg">
                     </a>
                 </div>
             </div>
@@ -66,7 +66,7 @@
             <div class="row text-center mt-4">
                 <div class="col-12">
                     <a href="./faq/4">
-                        <img class="" src="./images/Pickup%20or%20shipping.svg">
+                        <img class="" src="/images/Pickup%20or%20shipping.svg">
                     </a>
                 </div>
             </div>
@@ -78,7 +78,7 @@
             <div class="row text-center mt-4">
                 <div class="col-12">
                     <a href="./faq/5">
-                        <img class="" src="./images/Return.svg">
+                        <img class="" src="/images/Return.svg">
                     </a>
                 </div>
             </div>
@@ -91,7 +91,7 @@
             <div class="row text-center mt-4">
                 <div class="col-12">
                     <a href="./faq/6">
-                        <img class="" src="./images/Modification%20and%20Cancellation.svg">
+                        <img class="" src="/images/Modification%20and%20Cancellation.svg">
                     </a>
                 </div>
             </div>
