--- a/views/user/editar.handlebars
+++ b/views/user/editar.handlebars
@@ -5,7 +5,7 @@
             <figure>
                 <img src="../images/General.svg">
                 <figcaption>NOME DO USUARIO</figcaption>
-            </figure> 
+            </figure>
 
             <div class="editpwd">
                 <div class="card" id="editpwd1">
@@ -15,7 +15,7 @@
                             <div class="form-group">
                                 <label for="exampleInputEmail1">Password antigo</label>
                                 <input type="password" class="form-control"  placeholder="Enter old passworrd">
-                                
+
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputPassword1">Novo Password</label>
@@ -39,56 +39,56 @@
 
                     <h2 id="separador"></h2>
 
-                    <form method="POST" action="">
+                    <form method="POST" action="/users/config">
                         <div class="form-row">
                             <div class="form-group col-md-6">
                                 <label for="inputNome">Nome</label>
-                                <input type="text" class="form-control" id="inputNome" placeholder="Nome">
+                                <input type="text" class="form-control" id="inputNome" name="firstName" placeholder="Nome">
                             </div>
                             <div class="form-group col-md-6">
                                 <label for="inputApelido">Apelido</label>
-                                <input type="text" class="form-control" id="inputApelido" placeholder="Apelido">
+                                <input type="text" class="form-control" id="inputApelido" name="lastName" placeholder="Apelido">
                             </div>
                         </div>
                         <div class="form-row">
                             <div class="form-group col-md-6">
                                 <label for="inputEmail4">Email</label>
-                                <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                                <input type="email" class="form-control" id="inputEmail4" name="email" placeholder="Email">
                             </div>
                             <div class="form-group col-md-6">
                                 <label for="inputTelefone">Telefone</label>
-                                <input type="Telefone" class="form-control" id="inputTelefone" placeholder="Telefone">
+                                <input type="Telefone" class="form-control" id="inputTelefone" name="phone" placeholder="Telefone">
                             </div>
                         </div>
                         <div class="form-row">
                             <div class="form-group col-md-6">
                                 <label for="inputAddress">Address</label>
-                                <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                                <input type="text" class="form-control" id="inputAddress" name="street_adress" placeholder="1234 Main St">
                             </div>
                             <div class="form-group col-md-6">
                                 <label for="inputAddress2">Address Cobrança</label>
-                                <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+                                <input type="text" class="form-control" id="inputAddress2" name="biling_adress" placeholder="Apartment, studio, or floor">
                             </div>
                         </div>
                         <div class="form-row">
                             <div class="form-group col-md-6">
                                 <label for="inputCity">City</label>
-                                <input type="text" class="form-control" id="inputCity">
+                                <input type="text" class="form-control" id="inputCity" name="city">
                             </div>
                             <div class="form-group col-md-6">
                                 <label for="inputZip">Zip</label>
-                                <input type="text" class="form-control" id="inputZip">
+                                <input type="text" class="form-control" id="inputZip" name="zip_code">
                             </div>
                         </div>
                         <div class="form-row">
                         <div class="form-group col-md-6">
                             <label for="inputZip">Pais</label>
-                            <input type="text" class="form-control" id="inputPais">
+                            <input type="text" class="form-control" id="inputPais" name="country">
                         </div>
                         </div>
 
                         <div class="col-md-12 pull-right">
-                            <a href="#" class="btn btn-info btn-lg active" role="button" aria-pressed="true">Confirmar</a>
+                            <input type="submit" value="enviar">
                             <a href="#" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Cancelar</a>
 
                         </div>
