fix update users issue

--- a/views/user/editar.handlebars
+++ b/views/user/editar.handlebars
@@ -43,47 +43,47 @@
                         <div class="form-row">
                             <div class="form-group col-md-6">
                                 <label for="inputNome">Nome</label>
-                                <input type="text" class="form-control" id="inputNome" name="firstName" placeholder="Nome">
+                                <input type="text" class="form-control" id="inputNome" value="{{User.firstName}}" name="firstName" placeholder="Nome">
                             </div>
                             <div class="form-group col-md-6">
                                 <label for="inputApelido">Apelido</label>
-                                <input type="text" class="form-control" id="inputApelido" name="lastName" placeholder="Apelido">
+                                <input type="text" class="form-control" id="inputApelido" value="{{User.lastName}}" name="lastName" placeholder="Apelido">
                             </div>
                         </div>
                         <div class="form-row">
                             <div class="form-group col-md-6">
                                 <label for="inputEmail4">Email</label>
-                                <input type="email" class="form-control" id="inputEmail4" name="email" placeholder="Email">
+                                <input type="email" class="form-control" id="inputEmail4" value="{{User.email}}" name="email" placeholder="Email">
                             </div>
                             <div class="form-group col-md-6">
                                 <label for="inputTelefone">Telefone</label>
-                                <input type="Telefone" class="form-control" id="inputTelefone" name="phone" placeholder="Telefone">
+                                <input type="Telefone" class="form-control" id="inputTelefone" value="{{User.phone}}" name="phone" placeholder="Telefone">
                             </div>
                         </div>
                         <div class="form-row">
                             <div class="form-group col-md-6">
                                 <label for="inputAddress">Address</label>
-                                <input type="text" class="form-control" id="inputAddress" name="street_adress" placeholder="1234 Main St">
+                                <input type="text" class="form-control" id="inputAddress" value="{{User.street_adress}}" name="street_adress" placeholder="1234 Main St">
                             </div>
                             <div class="form-group col-md-6">
                                 <label for="inputAddress2">Address Cobrança</label>
-                                <input type="text" class="form-control" id="inputAddress2" name="biling_adress" placeholder="Apartment, studio, or floor">
+                                <input type="text" class="form-control" id="inputAddress2" value="{{User.biling_adress}}" name="biling_adress" placeholder="Apartment, studio, or floor">
                             </div>
                         </div>
                         <div class="form-row">
                             <div class="form-group col-md-6">
                                 <label for="inputCity">City</label>
-                                <input type="text" class="form-control" id="inputCity" name="city">
+                                <input type="text" class="form-control" id="inputCity" value="{{User.city}}" name="city">
                             </div>
                             <div class="form-group col-md-6">
                                 <label for="inputZip">Zip</label>
-                                <input type="text" class="form-control" id="inputZip" name="zip_code">
+                                <input type="text" class="form-control" id="inputZip" value="{{User.zip_code}}" name="zip_code">
                             </div>
                         </div>
                         <div class="form-row">
                         <div class="form-group col-md-6">
                             <label for="inputZip">Pais</label>
-                            <input type="text" class="form-control" id="inputPais" name="country">
+                            <input type="text" class="form-control" id="inputPais" value="{{User.country}}" name="country">
                         </div>
                         </div>
 
