--- a/views/partials/_login.handlebars
+++ b/views/partials/_login.handlebars
@@ -14,10 +14,10 @@
 
                         <div class="row text-center" id="redesocial">
                             <div class="col-md-6">
-                                <a href="/auth/facebook" class="btn btn-primary"><i class="fab fa-facebook-square"></i>  Facebook</a>
+                                <a href="/auth/facebook" class="btn btn-success terra"><i class="fab fa-facebook-square"></i>  Facebook</a>
                                 </div>
                             <div class="col-md-6">
-                                <a href="/auth/google" class="btn btn-danger"><i class="fab fa-google"></i>  Google</a>
+                                <a href="/auth/google" class="btn btn-danger terra"><i class="fab fa-google"></i>  Google</a>
                             </div>
                         </div>
                         <h2 id="separador"><span>{{translation.OR}}</span></h2>
