--- a/public/css/media.css
+++ b/public/css/media.css
@@ -237,6 +237,13 @@ footer .ab {
         /*margin-left: 1%;*/
     }
 
+    footer .cc {
+        text-align: center;
+    }
+    footer .mm {
+        text-align: center;
+    }
+
 }
 
 /* 
@@ -422,6 +429,12 @@ footer .ab {
 
     footer .rsocial {
         /*margin-left: 1%;*/
+    }
+    footer .cc {
+        text-align: center;
+    }
+    footer .mm {
+        text-align: center;
     }
 
 }
