--- a/views/partials/_navbars.handlebars
+++ b/views/partials/_navbars.handlebars
@@ -58,7 +58,7 @@
                   <i class="far fa-user"></i> {{User.firstName}} {{User.lastName}}
                 </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item"  href="/users"><i class="fas fa-user-tag"></i> {{translation.PERFIL}}</a>
+                  <a class="dropdown-item"  href="/users/{{User.id}}"><i class="fas fa-user-tag"></i> {{translation.PERFIL}}</a>
                   <a class="dropdown-item"  href="/auth/logout"><i class="fas fa-sign-out-alt"></i> {{translation.SAIR}}</a>
             </div>
           </li>
