--- a/views/user/dash.handlebars
+++ b/views/user/dash.handlebars
@@ -77,7 +77,7 @@
 
             <div class="card">
                 <div class="card-body">
-                <table id="dt-basic-checkbox" class="table table-striped table-hover">
+                <table id="table_id" class="table table-striped table-hover">
                     <thead>
                     <tr>
                         <th>Select</th>
@@ -96,10 +96,7 @@
                     <tbody>
                     <tr>
                         <td>
-                            <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="customCheck1" unchecked>
-                                <label class="custom-control-label" for="customCheck1">1</label>
-                            </div>
+                            
                         </td>
                         <td>Software Engineer</td>
                         <td>Edinburgh</td>
@@ -108,10 +105,7 @@
                         <td>$103,600</td>
                     </tr><tr>
                         <td>
-                            <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="customCheck2" unchecked>
-                                <label class="custom-control-label" for="customCheck2">2</label>
-                            </div>
+                            
                         </td>
                         <td>Software Engineer</td>
                         <td>Edinburgh</td>
@@ -120,10 +114,7 @@
                         <td>$103,600</td>
                     </tr><tr>
                         <td>
-                            <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="customCheck3" unchecked>
-                                <label class="custom-control-label" for="customCheck3">3</label>
-                            </div>
+                            
                         </td>
                         <td>Software Engineer</td>
                         <td>Edinburgh</td>
@@ -132,10 +123,7 @@
                         <td>$103,600</td>
                     </tr><tr>
                         <td>
-                            <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="customCheck4" unchecked>
-                                <label class="custom-control-label" for="customCheck4">4</label>
-                            </div>
+                         
                         </td>
                         <td>Software Engineer</td>
                         <td>Edinburgh</td>
@@ -144,10 +132,7 @@
                         <td>$103,600</td>
                     </tr><tr>
                         <td>
-                            <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="customCheck5" unchecked>
-                                <label class="custom-control-label" for="customCheck5">5</label>
-                            </div>
+                            
                         </td>
                         <td>Software Engineer</td>
                         <td>Edinburgh</td>
@@ -156,10 +141,7 @@
                         <td>$103,600</td>
                     </tr><tr>
                         <td>
-                            <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="customCheck6" unchecked>
-                                <label class="custom-control-label" for="customCheck6">6</label>
-                            </div>
+                           
                         </td>
                         <td>Software Engineer</td>
                         <td>Edinburgh</td>
@@ -168,10 +150,7 @@
                         <td>$103,600</td>
                     </tr><tr>
                         <td>
-                            <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="customCheck7" unchecked>
-                                <label class="custom-control-label" for="customCheck7">7</label>
-                            </div>
+                           
                         </td>
                         <td>Software Engineer</td>
                         <td>Edinburgh</td>
@@ -181,10 +160,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="customCheck8" unchecked>
-                                <label class="custom-control-label" for="customCheck8">8</label>
-                            </div>
+                            
                         </td>
                         <td>Office Manager</td>
                         <td>London</td>
@@ -194,10 +170,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="customCheck9" unchecked>
-                                <label class="custom-control-label" for="customCheck9">9</label>
-                            </div>
+                            
                         </td>
                         <td>Support Lead</td>
                         <td>Edinburgh</td>
@@ -207,10 +180,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="customCheck10" unchecked>
-                                <label class="custom-control-label" for="customCheck10">10</label>
-                            </div>
+                            
                         </td>
                         <td>Regional Director</td>
                         <td>San Francisco</td>
