fix email, add user confirmation email, fix, fix, fix

--- a/views/home/planos.handlebars
+++ b/views/home/planos.handlebars
@@ -70,7 +70,7 @@
                     <p class="card-text font-weight-bold">Data plan per day</p>
                     <p class="card-text font-weight-bold">Number of devices</p>
                     <p class="card-text font-weight-bold">Battery life</p>
-                    <a href="/booking/1" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
+                    <a href="/booking" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
                 </div>
             </div>
         </div>
@@ -84,7 +84,7 @@
                     <p class="card-text font-weight-bold">Data plan per day</p>
                     <p class="card-text font-weight-bold">Number of devices</p>
                     <p class="card-text font-weight-bold">Battery life</p>
-                    <a href="/booking/2" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
+                    <a href="/booking" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
                 </div>
             </div>
         </div>
@@ -98,7 +98,7 @@
                     <p class="card-text font-weight-bold">Data plan per day</p>
                     <p class="card-text font-weight-bold">Number of devices</p>
                     <p class="card-text font-weight-bold">Battery life</p>
-                    <a href="/booking/3" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
+                    <a href="/booking" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
                 </div>
             </div>
         </div>
