--- a/views/user/dash.handlebars
+++ b/views/user/dash.handlebars
@@ -1,10 +1,23 @@
 <!--User dashboard-->
 
 <section class="container-fluid"  id="dashboard">
+    {{#if User.confirme}}
+        {{!-- nada co mostra --}}
+    {{else}}
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <div class="alert alert-primary" role="alert">
+                    <span class="text-danger">Sua conta ainda nao foi validada, por favor verifique a sua conta para o validar.</span>
+                </div>
+            </div>
+        </div>
+    {{/if}}
+
+
     <div class="row">
         <div class="col-md-4">
             <figure>
-                <img src="../images/General.svg">
+                <img src="/images/General.svg">
                 <figcaption class="mt-2 h1">{{User.firstName}} {{User.lastName}}</figcaption>
             </figure>
         </div>
@@ -14,7 +27,7 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-md-12">
-                            <h5 class="card-title">MINHAS INFORMAÇÕES <a href="/users/config"><i class="float-right fas fa-user-edit"></i></a></h5>
+                            <h5 class="card-title">MINHAS INFORMAÇÕES <a href="/users/{{User.id}}/config"><i class="float-right fas fa-user-edit"></i></a></h5>
                         </div>
                     </div>
 
