--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -8,7 +8,7 @@
                 {{!-- <img src="/images/logo.png" width="350" height="300"> --}}
             </div>
             <div class="row">
-                <a href="#" class="btn btn-info btn-lg">{{translation.ONLINE_BOOKING}} </a>
+                <a href="/booking" class="btn btn-info btn-lg">{{translation.ONLINE_BOOKING}} </a>
             </div>
         </div>
 
@@ -119,7 +119,7 @@
                     <p class="card-text font-weight-bold">Data plan per day</p>
                     <p class="card-text font-weight-bold">Number of devices</p>
                     <p class="card-text font-weight-bold">Battery life</p>
-                    <a href="./booking/6" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
+                    <a href="/booking" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
                 </div>
             </div>
         </div>
@@ -133,7 +133,7 @@
                     <p class="card-text font-weight-bold">Data plan per day</p>
                     <p class="card-text font-weight-bold">Number of devices</p>
                     <p class="card-text font-weight-bold">Battery life</p>
-                    <a href="./booking/5" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
+                    <a href="/booking" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
                 </div>
             </div>
         </div>
@@ -147,7 +147,7 @@
                     <p class="card-text font-weight-bold">Data plan per day</p>
                     <p class="card-text font-weight-bold">Number of devices</p>
                     <p class="card-text font-weight-bold">Battery life</p>
-                    <a href="./booking/4" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
+                    <a href="/booking" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
                 </div>
             </div>
         </div>
