--- a/views/partials/_navbars.handlebars
+++ b/views/partials/_navbars.handlebars
@@ -22,7 +22,7 @@
         </li>
         <li class="nav-item dropdown">
           {{#if_equal translation lang 'en'}}
-                <a class="nav-link dropdown-toggle"  href="/?clang=es" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle"  href="/?clang=en" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   <span class="flag-icon flag-icon-gb-eng"></span> {{translation.en}}
                 </a>
           {{/if_equal}}
