--- a/views/user/editar.handlebars
+++ b/views/user/editar.handlebars
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-md-4">
             <figure>
-                <img src="../images/General.svg">
+                <img src="/images/General.svg">
                 <figcaption>NOME DO USUARIO</figcaption>
             </figure>
 
