confirmar por email

--- a/views/partials/_login.handlebars
+++ b/views/partials/_login.handlebars
@@ -39,7 +39,7 @@
                                 </div>
                                 <div class="row mb-3">
                                     <div class="col-md-6">
-                                      <input  class="btn btn-outline-warning terras" type="reset" value="canselar">
+                                      <input  class="btn btn-outline-warning terras" type="reset" value="cancelar">
                                     </div>
                                     <div class="col-md-6">
                                       <input class="btn btn-success terra" type="submit" value="{{translation.ENTRAR}}">
@@ -87,7 +87,7 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         {{!-- <button type="button" class=" btn-danger cancel">Cancel</button> --}}
-                                        <input class="terras btn btn-outline-warning" type="reset" value="canselar">
+                                        <input class="terras btn btn-outline-warning" type="reset" value="cancelar">
                                     </div>
                                     <div class="col-md-6">
                                         {{!-- <button type="submit" class="signupbtn">Sign Up</button> --}}
