--- a/views/user/dash.handlebars
+++ b/views/user/dash.handlebars
@@ -68,7 +68,7 @@
             <a class="reserva nav-item nav-link active" data-toggle="tab" href="#" role="tab" aria-selected="true">RESERVAS ATUAIS</a>
         </div>
         <div class="col-6">
-            <a class="reserva nav-item nav-link active" data-toggle="tab" href="#" role="tab" aria-selected="true">RESERVAS ATUAIS</a>
+            <a class="reserva nav-item nav-link active" data-toggle="tab" href="#" role="tab" aria-selected="true">RESERVAS ANTERIORES</a>
         </div>
     </div>
 
@@ -96,7 +96,7 @@
                     <tbody>
                     <tr>
                         <td>
-                            
+
                         </td>
                         <td>Software Engineer</td>
                         <td>Edinburgh</td>
@@ -105,7 +105,7 @@
                         <td>$103,600</td>
                     </tr><tr>
                         <td>
-                            
+
                         </td>
                         <td>Software Engineer</td>
                         <td>Edinburgh</td>
@@ -114,7 +114,7 @@
                         <td>$103,600</td>
                     </tr><tr>
                         <td>
-                            
+
                         </td>
                         <td>Software Engineer</td>
                         <td>Edinburgh</td>
@@ -123,7 +123,7 @@
                         <td>$103,600</td>
                     </tr><tr>
                         <td>
-                         
+
                         </td>
                         <td>Software Engineer</td>
                         <td>Edinburgh</td>
@@ -132,7 +132,7 @@
                         <td>$103,600</td>
                     </tr><tr>
                         <td>
-                            
+
                         </td>
                         <td>Software Engineer</td>
                         <td>Edinburgh</td>
@@ -141,7 +141,7 @@
                         <td>$103,600</td>
                     </tr><tr>
                         <td>
-                           
+
                         </td>
                         <td>Software Engineer</td>
                         <td>Edinburgh</td>
@@ -150,7 +150,7 @@
                         <td>$103,600</td>
                     </tr><tr>
                         <td>
-                           
+
                         </td>
                         <td>Software Engineer</td>
                         <td>Edinburgh</td>
@@ -160,7 +160,7 @@
                     </tr>
                     <tr>
                         <td>
-                            
+
                         </td>
                         <td>Office Manager</td>
                         <td>London</td>
@@ -170,7 +170,7 @@
                     </tr>
                     <tr>
                         <td>
-                            
+
                         </td>
                         <td>Support Lead</td>
                         <td>Edinburgh</td>
@@ -180,7 +180,7 @@
                     </tr>
                     <tr>
                         <td>
-                            
+
                         </td>
                         <td>Regional Director</td>
                         <td>San Francisco</td>
