add resetsenha & google recaptcha

--- a/views/partials/_login.handlebars
+++ b/views/partials/_login.handlebars
@@ -34,7 +34,7 @@
                                     <input type="checkbox" checked="checked" name="remember"> Remember me
                                     </label>
                                     <label id="forgot">
-                                        <a href="/resetSenha">Esqueceu a senha?</a>
+                                        <a href="/auth/resetSenha">Esqueceu a senha?</a>
                                     </label>
                                 </div>
                                 <div class="row mb-3">
