--- a/public/css/main.css
+++ b/public/css/main.css
@@ -191,11 +191,7 @@ footer .mrg {
 #AboutDevices {
     background-color: gray;
     padding: 2% 10% 10% 10%;
-    /*height: 500px;*/
-}
-
-#AboutDevices .list-group li {
-    color: #1b1e21;
+    
 }
 
 #AboutDevices img{
@@ -203,44 +199,65 @@ footer .mrg {
     position: relative;
 }
 
-#AboutDevices .devicebox span {
-    cursor: pointer;
-}
-#AboutDevices .devicebox {
-    background-color: white;
-    position: absolute;
-    /* deslizado*/
-    /*top: 80%;*/
-    /* escondido*/
-    top: 3%;
-    left: 6%;
-    z-index: 1;
-    text-align: center;
-    margin-left: 4%;
-    border-bottom-left-radius: 50px;
-    border-bottom-right-radius: 50px;
-
-    width: 60%;
-}
-#AboutDevices .devicebox > *{
-    color: black;
-}
-#AboutDevices .device {
-    float: left;
-}
-#AboutDevices .devices {
-    /*padding: 2% 10% 10% 10%;*/
-    width: 100%;
-
-}
 #AboutDevices .device {
     position: relative;
-    width: 80%;
+    /* width: 80%; */
 }
-#AboutDevices .devicebox ul {
+/* #AboutDevices .devicebox ul {
     list-style-type: none;
     padding-left: 0;
+} */
+/* news code */
+
+/* .device > div > div{
+    display: inline-block;
+    height: 111.74px;
+    width: 163.7px;
+    margin-left: 100px;
+    margin-top: 100px;
+    /* margin-bottom: 310px; 
+    position: relative;
+} */
+/* .device > div > div >img{
+    z-index: 5;
+    position: relative;
+} */
+#AboutDevices .dropdown{
+    height: 45px;
+    width: 130px;
+    overflow: hidden;
+    position:absolute;
+    background-color: #FFFFFF;
+    text-align: center;
+    /* margin-top: -10px; */
+    padding-top: 25px;
+    transition: height 0.4s;
+    left: 11%;
+    /* right: 0px; */
+    margin: auto;
+    top: 80px;
+    z-index: 1;
+
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
 }
+#AboutDevices .dropdown li {
+    list-style: none;
+    margin-top: 10px;
+}
+#AboutDevices .dropdown i {
+    width: 20px;
+    margin-right: 10px;
+    font-size: 12px;
+    text-align: center;
+    color: black;
+}
+#AboutDevices .slide {
+    height: 130px;
+}
+
+
+
 
 
 /********** fim dos estilos para seccao sobre os devices********/
@@ -498,7 +515,7 @@ footer .mrg {
 /*********** estilos para menu (navbar) **********************/
 
 #menu a {
-    color: #1FB0C1;
+    color: #1FB0C1; 
 }
 #menu form a {
     color: white;
@@ -521,4 +538,17 @@ footer .mm {
 	border-color: #1FB0C1;
 	font-weight: bold;
 	width: 100%;
+}
+
+
+/********************reset senha css****************************/
+.resetbody {
+    background: #2193b0;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #6dd5ed, #2193b0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+#ResetSenha {
+    padding: 5% 10% 10% 10%;
+    text-align: center;
 }
