--- a/views/user/dash.handlebars
+++ b/views/user/dash.handlebars
@@ -264,9 +264,9 @@
             <div class="col-md-6">
                 <a href="/pagamento" class="btn btn-info btn-lg active" id="recarregar" role="button" aria-pressed="true">Recarregar</a>
             </div>
-             <div class="col-md-6">
+             <!--<div class="col-md-6">
                  <a href="#" class="btn btn-secondary btn-lg active" id="cancelar" role="button" aria-pressed="true">Cancelar</a>
-             </div>
+             </div>-->
          </div>
     </div>
 </section>
