--- a/views/home/servicos.handlebars
+++ b/views/home/servicos.handlebars
@@ -117,25 +117,68 @@
         <div class="col-md-12 text-center">
             <h1 class="display-4 font-weight-bold">{{translation.ATD}}</h1>
         </div>
-    </div> 
+    </div>
 
     <div class="row mo">
-        
+
         <div class="col-md-3">
             <div class="device">
-                <img id="device-5" class="img" onclick='clickHandler(event)' src="/images/Camada%2044.png">
+                <img id="device-1" class="img" onclick='clickHandler(event)' src="/images/Camada%2044.png">
                 <div class="devicebox">
-                    <ul id="drop5" class='dropdown'>
-                        <li><i class='fa fa-wifi'></i> info 1</li>
-                        <li><i class='fa fa-tachometer'></i> info 2</li>
-                        <li><i class='fa fa-mobile'></i> info 2</li>
-                        <li><i class='fa fa-battery-full'></i> info 3</li>
+                    <ul id="drop1" class='dropdown'>
+                        <li><i class='fa fa-wifi'></i> info1</li>
+                        <li><i class="fas fa-tachometer-alt"></i> info2</li>
+                        <li><i class='fa fa-mobile'></i> info3</li>
+                        <li><i class='fa fa-battery-full'></i> info4</li>
                     </ul>
-                    <span><i class="fas fa-chevron-down"></i></span>
+                    <!--<span><i class="fas fa-chevron-down"></i></span>-->
                 </div>
-                
+
             </div>
         </div>
+        <div class="col-md-3">
+        <div class="device">
+            <img id="device-2" class="img" onclick='clickHandler(event)' src="/images/Camada%2044.png">
+            <div class="devicebox">
+                <ul id="drop2" class='dropdown'>
+                    <li><i class='fa fa-wifi'></i> info1</li>
+                    <li><i class="fas fa-tachometer-alt"></i> info2</li>
+                    <li><i class='fa fa-mobile'></i> info3</li>
+                    <li><i class='fa fa-battery-full'></i> info4</li>
+                </ul>
+                <!--<span><i class="fas fa-chevron-down"></i></span>-->
+            </div>
+
+        </div>
+    </div><div class="col-md-3">
+        <div class="device">
+            <img id="device-3" class="img" onclick='clickHandler(event)' src="/images/Camada%2044.png">
+            <div class="devicebox">
+                <ul id="drop3" class='dropdown'>
+                    <li><i class='fa fa-wifi'></i> info1</li>
+                    <li><i class="fas fa-tachometer-alt"></i> info2</li>
+                    <li><i class='fa fa-mobile'></i> info3</li>
+                    <li><i class='fa fa-battery-full'></i> info4</li>
+                </ul>
+                <!--<span><i class="fas fa-chevron-down"></i></span>-->
+            </div>
+
+        </div>
+    </div><div class="col-md-3">
+        <div class="device">
+            <img id="device-4" class="img" onclick='clickHandler(event)' src="/images/Camada%2044.png">
+            <div class="devicebox">
+                <ul id="drop4" class='dropdown'>
+                    <li><i class='fa fa-wifi'></i> info1</li>
+                    <li><i class="fas fa-tachometer-alt"></i> info2</li>
+                    <li><i class='fa fa-mobile'></i> info3</li>
+                    <li><i class='fa fa-battery-full'></i> info4</li>
+                </ul>
+                <!--<span><i class="fas fa-chevron-down"></i></span>-->
+            </div>
+
+        </div>
+    </div>
     </div>
 </section>
 
