responsividade faq para tablet

--- a/views/home/faq.handlebars
+++ b/views/home/faq.handlebars
@@ -25,7 +25,7 @@
 
 <section id="categoria"  class="container-fluid">
     <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-2 col-sm-4">
             <div class="row text-center mt-4">
                 <div class="col-12">
                     <a class="general" href="/faq/1">
@@ -38,7 +38,7 @@
                 <div class="col-12 mt-4"><h6 class="text-center font-weight-bold ativo" >{{translation.GENERAL}}</h6></div>
             </div>
         </div>
-        <div class="col-md">
+        <div class="col-md-2 col-sm-4">
             <div class="row text-center mt-4">
                 <div class="col-12">
                     <a href="./faq/2">
@@ -50,7 +50,7 @@
                 <div class="col-12 mt-4"><h6 class="text-center font-weight-bold" >{{translation.USAGE}}</h6></div>
             </div>
         </div>
-        <div class="col-md">
+        <div class="col-md-2 col-sm-4">
             <div class="row text-center mt-4">
                 <div class="col-12">
                     <a href="./faq/3">
@@ -62,7 +62,7 @@
                 <div class="col-12 mt-4"><h6 class="text-center font-weight-bold" >{{translation.B_PAYMENT}}</h6></div>
             </div>
         </div>
-        <div class="col-md">
+        <div class="col-md-2 col-sm-4">
             <div class="row text-center mt-4">
                 <div class="col-12">
                     <a href="./faq/4">
@@ -74,7 +74,7 @@
                 <div class="col-12 mt-4"><h6 class="text-center font-weight-bold">{{translation.P_SHIPPING}}</h6></div>
             </div>
         </div>
-        <div class="col-md">
+        <div class="col-md-2 col-sm-4">
             <div class="row text-center mt-4">
                 <div class="col-12">
                     <a href="./faq/5">
@@ -87,7 +87,7 @@
             </div>
 
         </div>
-        <div class="col-md">
+        <div class="col-md-2 col-sm-4">
             <div class="row text-center mt-4">
                 <div class="col-12">
                     <a href="./faq/6">
