--- a/views/user/dash.handlebars
+++ b/views/user/dash.handlebars
@@ -17,7 +17,12 @@
     <div class="row">
         <div class="col-md-4">
             <figure>
-                <img src="{{User.photo}}">
+                
+                {{#if User.photo}}
+                    <img src="{{User.photo}}">
+                {{else}}
+                    <img src="/images/Beneficios 1.svg">
+                {{/if}}
                 <figcaption class="mt-2 h1">{{User.firstName}} {{User.lastName}}</figcaption>
             </figure>
         </div>
