--- a/views/partials/_navbars.handlebars
+++ b/views/partials/_navbars.handlebars
@@ -70,7 +70,11 @@
     </ul>
     <form class="form-inline my-2 my-lg-0">
       {{#if User}}
-        <a href="/booking" class="btn btn-info my-2 my-sm-0">{{translation.ONLINE_BOOKING}}</a>
+        {{#if User.confirme}}
+          <a href="/booking" class="btn btn-info my-2 my-sm-0">{{translation.ONLINE_BOOKING}}</a>
+        {{else}}
+          <a href="/users/{{User.id}}" class="btn btn-info my-2 my-sm-0">{{translation.ONLINE_BOOKING}}</a>
+        {{/if}}
       {{else}}
         <a class="btn btn-info my-2 my-sm-0"   data-toggle="modal" data-target="#login">{{translation.ONLINE_BOOKING}}</a>
       {{/if}}
