--- a/views/user/dash.handlebars
+++ b/views/user/dash.handlebars
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <div class="alert alert-primary" role="alert">
-                    <span class="text-danger">Sua conta ainda nao foi validada, por favor verifique a sua conta para o validar.</span>
+                    <span class="text-danger">Sua conta ainda nao foi validada, por favor verifique a sua conta para poder fazer operacoes no site</span>
                 </div>
             </div>
         </div>
