--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -9,7 +9,11 @@
             </div>
             <div class="row">
                 {{#if User}}
-                    <a href="/booking" class="btn btn-info btn-lg ho">{{translation.ONLINE_BOOKING}} </a>
+                    {{#if User.confirme}}
+                        <a href="/booking" class="btn btn-info btn-lg ho">{{translation.ONLINE_BOOKING}} </a>
+                    {{else}}
+                        <a href="/users/{{User.id}}" class="btn btn-info btn-lg ho">{{translation.ONLINE_BOOKING}} </a>
+                    {{/if}}
                 {{else}}
                     <a class="btn btn-info btn-lg wifi-text-azul ho"   data-toggle="modal" data-target="#login">{{translation.ONLINE_BOOKING}}</a>
                 {{/if}}
@@ -124,7 +128,11 @@
                     <p class="card-text font-weight-bold">Number of devices</p>
                     <p class="card-text font-weight-bold">Battery life</p>
                     {{#if User}}
-                        <a href="/booking" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
+                        {{#if User.confirme}}
+                            <a href="/booking" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
+                        {{else}}
+                            <a href="/users/{{User.id}}" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
+                        {{/if}}
                     {{else}}
                         <a class="btn btn-primary site-cor wifi-text-white"   data-toggle="modal" data-target="#login">{{translation.ONLINE_BOOKING}}</a>
                     {{/if}}
@@ -142,7 +150,11 @@
                     <p class="card-text font-weight-bold">Number of devices</p>
                     <p class="card-text font-weight-bold">Battery life</p>
                     {{#if User}}
-                        <a href="/booking" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
+                        {{#if User.confirme}}
+                            <a href="/booking" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
+                        {{else}}
+                            <a href="/users/{{User.id}}" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
+                        {{/if}}
                     {{else}}
                         <a class="btn btn-primary site-cor wifi-text-white"   data-toggle="modal" data-target="#login">{{translation.ONLINE_BOOKING}}</a>
                     {{/if}}
@@ -160,7 +172,11 @@
                     <p class="card-text font-weight-bold">Number of devices</p>
                     <p class="card-text font-weight-bold">Battery life</p>
                     {{#if User}}
-                        <a href="/booking" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
+                        {{#if User.confirme}}
+                            <a href="/booking" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
+                        {{else}}
+                            <a href="/users/{{User.id}}" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
+                        {{/if}}
                     {{else}}
                         <a class="btn btn-primary site-cor wifi-text-white"   data-toggle="modal" data-target="#login">{{translation.ONLINE_BOOKING}}</a>
                     {{/if}}
